--- a/src/SFA.Apprenticeships.Web.Recruit.UnitTests/SFA.Apprenticeships.Web.Recruit.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit.UnitTests/SFA.Apprenticeships.Web.Recruit.UnitTests.csproj
@@ -134,6 +134,9 @@
     <Compile Include="Builders\ClaimsPrincipalBuilder.cs" />
     <Compile Include="Mediators\Home\HomeMediatorBuilder.cs" />
     <Compile Include="Mediators\Home\HomeMediatorTests.cs" />
+    <Compile Include="Mediators\ProviderUser\TestBase.cs" />
+    <Compile Include="Mediators\ProviderUser\VerifyEmailAddressTests.cs" />
+    <Compile Include="Mediators\ProviderUser\UpdateUserTests.cs" />
     <Compile Include="Mediators\Provider\ProviderMediatorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validators\Providers\ProviderSiteSearchViewModelValidatorTests.cs" />
