--- a/src/SFA.Apprenticeships.Domain.Interfaces/SFA.Apprenticeships.Domain.Interfaces.csproj
+++ b/src/SFA.Apprenticeships.Domain.Interfaces/SFA.Apprenticeships.Domain.Interfaces.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Repositories\IApprenticeshipApplicationRepository.cs" />
     <Compile Include="Repositories\IAuthenticationRepository.cs" />
     <Compile Include="Repositories\IExpiringApprenticeshipApplicationDraftRepository.cs" />
+    <Compile Include="Repositories\IProviderUserRepository.cs" />
     <Compile Include="Repositories\IUserRepository.cs" />
     <Compile Include="Repositories\ICandidateRepository.cs" />
     <Compile Include="Repositories\IWriteRepository.cs" />
