Added service interface

--- a/src/SFA.Apprenticeships.Application.UserProfile/SFA.Apprenticeships.Application.UserProfile.csproj
+++ b/src/SFA.Apprenticeships.Application.UserProfile/SFA.Apprenticeships.Application.UserProfile.csproj
@@ -80,6 +80,7 @@
     <Compile Include="..\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="IProviderUserService.cs" />
     <Compile Include="ProviderUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
