--- a/src/SFA.Apprenticeships.Domain.Interfaces/SFA.Apprenticeships.Domain.Interfaces.csproj
+++ b/src/SFA.Apprenticeships.Domain.Interfaces/SFA.Apprenticeships.Domain.Interfaces.csproj
@@ -97,6 +97,8 @@
     <Compile Include="Caching\ICacheService.cs" />
     <Compile Include="Mapping\IMapper.cs" />
     <Compile Include="Repositories\IAuditRepository.cs" />
+    <Compile Include="Repositories\IProviderRepository.cs" />
+    <Compile Include="Repositories\IProviderSiteRepository.cs" />
     <Compile Include="Repositories\ISavedSearchAlertRepository.cs" />
     <Compile Include="Repositories\IApplicationStatusAlertRepository.cs" />
     <Compile Include="Repositories\IContactMessageRepository.cs" />
