--- a/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
@@ -474,6 +474,10 @@
       <Project>{1B92E84D-F15A-4521-BDB9-2BE321236167}</Project>
       <Name>SFA.Apprenticeships.Application.Organisation</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SFA.Apprenticeships.Application.UserProfile\SFA.Apprenticeships.Application.UserProfile.csproj">
+      <Project>{5853DBD3-4999-4710-8CAA-7BC0603C5827}</Project>
+      <Name>SFA.Apprenticeships.Application.UserProfile</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SFA.Apprenticeships.Domain.Entities\SFA.Apprenticeships.Domain.Entities.csproj">
       <Project>{4C2BE232-4DBD-44D0-B427-0450E2D857A5}</Project>
       <Name>SFA.Apprenticeships.Domain.Entities</Name>
@@ -493,6 +497,14 @@
     <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Logging\SFA.Apprenticeships.Infrastructure.Logging.csproj">
       <Project>{A2D82061-BCBD-4030-9EB4-5148AEE79241}</Project>
       <Name>SFA.Apprenticeships.Infrastructure.Logging</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Repositories.Providers\SFA.Apprenticeships.Infrastructure.Repositories.Providers.csproj">
+      <Project>{60B0072E-BC17-4D32-8331-A8A2C74B4500}</Project>
+      <Name>SFA.Apprenticeships.Infrastructure.Repositories.Providers</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Repositories.UserProfiles\SFA.Apprenticeships.Infrastructure.Repositories.UserProfiles.csproj">
+      <Project>{5C01B37D-8C9E-454F-864A-8861E051A170}</Project>
+      <Name>SFA.Apprenticeships.Infrastructure.Repositories.UserProfiles</Name>
     </ProjectReference>
     <ProjectReference Include="..\SFA.Apprenticeships.Web.Common\SFA.Apprenticeships.Web.Common.csproj">
       <Project>{adb1c795-a6aa-4cb8-82ae-2b8d10e22220}</Project>
