--- a/src/SFA.Apprenticeships.Application.UnitTests/SFA.Apprenticeships.Application.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Application.UnitTests/SFA.Apprenticeships.Application.UnitTests.csproj
@@ -163,6 +163,8 @@
     <Compile Include="Applications\Housekeeping\SubmittedApplicationHousekeeperTests.cs" />
     <Compile Include="Processors\CandidateProcesorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ProviderUserAccount\ResendEmailVerificationCodeStrategyTests.cs" />
+    <Compile Include="ProviderUserAccount\SendEmailVerificationCodeStrategyTests.cs" />
     <Compile Include="Services\Candidate\Strategies\AuthenticateCandidateStrategyTests\AuthenticateCandidateStrategyTests.cs" />
     <Compile Include="Services\Candidate\Strategies\Builders\QueuedLegacySaveCandidateStrategyBuilder.cs" />
     <Compile Include="Services\Candidate\Strategies\Builders\SaveCandidateStrategyBuilder.cs" />
