--- a/src/SFA.Apprenticeships.Application.Communication/SFA.Apprenticeships.Application.Communication.csproj
+++ b/src/SFA.Apprenticeships.Application.Communication/SFA.Apprenticeships.Application.Communication.csproj
@@ -84,8 +84,11 @@
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="CommunicationService.cs" />
+    <Compile Include="ProviderCommunicationService.cs" />
+    <Compile Include="Strategies\ISendProviderUserCommunicationStrategy.cs" />
     <Compile Include="Strategies\ISendUsernameUpdateCommunicationStrategy.cs" />
     <Compile Include="Strategies\ISendContactMessageStrategy.cs" />
+    <Compile Include="Strategies\QueueProviderUserCommunicationStrategy.cs" />
     <Compile Include="Strategies\QueueUsernameUpdateCommunicationStrategy.cs" />
     <Compile Include="Strategies\QueueContactMessageStrategy.cs" />
     <Compile Include="Strategies\QueueCandidateCommunicationStrategy.cs" />
