--- a/src/SFA.Apprenticeships.Application.UserAccount/SFA.Apprenticeships.Application.UserAccount.csproj
+++ b/src/SFA.Apprenticeships.Application.UserAccount/SFA.Apprenticeships.Application.UserAccount.csproj
@@ -87,12 +87,17 @@
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Configuration\UserAccountConfiguration.cs" />
+    <Compile Include="ProviderUserAccountService.cs" />
     <Compile Include="RandomCodeGenerator.cs" />
     <Compile Include="StaticCodeGenerator.cs" />
     <Compile Include="Strategies\ILockAccountStrategy.cs" />
     <Compile Include="Strategies\ILockUserStrategy.cs" />
     <Compile Include="Strategies\IUpdateUsernameStrategy.cs" />
     <Compile Include="Strategies\ISendAccountUnlockCodeStrategy.cs" />
+    <Compile Include="Strategies\ProviderUserAccount\IResendEmailVerificationCodeStrategy.cs" />
+    <Compile Include="Strategies\ProviderUserAccount\ISendEmailVerificationCodeStrategy.cs" />
+    <Compile Include="Strategies\ProviderUserAccount\ResendEmailVerificationCodeStrategy.cs" />
+    <Compile Include="Strategies\ProviderUserAccount\SendEmailVerificationCodeStrategy.cs" />
     <Compile Include="Strategies\SendPendingUsernameCodeStrategy.cs" />
     <Compile Include="Strategies\ISendPendingUsernameCodeStrategy.cs" />
     <Compile Include="Strategies\IUnlockAccountStrategy.cs" />
