Changes for initial deploy of RAA

--- a/src/SFA.Apprenticeships.Web.Recruit/Web.config
+++ b/src/SFA.Apprenticeships.Web.Recruit/Web.config
@@ -1,85 +1,86 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
   <configSections>
-    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
   </configSections>
   <system.diagnostics>
     <trace>
       <listeners>
         <add type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=2.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="AzureDiagnostics">
-          <filter type="" />
+          <filter type=""/>
         </add>
       </listeners>
     </trace>
   </system.diagnostics>
   <appSettings>
-    <add key="webpages:Version" value="3.0.0.0" />
-    <add key="webpages:Enabled" value="false" />
-    <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="ConfigurationPath" value="Configs\settings.config" />
-    <add key="Environment" value="Debug" />
-    <add key="ida:MetadataAddress" value="https://naspreacs.accesscontrol.windows.net/FederationMetadata/2007-06/FederationMetadata.xml" />
-    <add key="ida:Wtrealm" value="https://recruit.findapprenticeship.service.gov.uk/" />
+    <add key="webpages:Version" value="3.0.0.0"/>
+    <add key="webpages:Enabled" value="false"/>
+    <add key="ClientValidationEnabled" value="true"/>
+    <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <add key="ConfigurationPath" value="Configs\settings.config"/>
+    <add key="Environment" value="Debug"/>
+    <add key="ida:MetadataAddress" value="https://naspreacs.accesscontrol.windows.net/FederationMetadata/2007-06/FederationMetadata.xml"/>
+    <add key="ida:Wtrealm" value="https://recruit.findapprenticeship.service.gov.uk/"/>
   </appSettings>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.5.1" />
+      </system.Web>
+  -->
   <system.web>
-    <authentication mode="None" />
-    <compilation debug="true" targetFramework="4.5.2" />
-    <httpRuntime targetFramework="4.5.2" />
-    <customErrors mode="Off" />
+    <authentication mode="None"/>
+    <compilation debug="true" targetFramework="4.5.1"/>
+    <httpRuntime targetFramework="4.5.1"/>
+    <customErrors mode="Off"/>
   </system.web>
   <system.webServer>
     <httpCompression>
       <staticTypes>
-        <add mimeType="text/javascript" enabled="true" />
-        <add mimeType="text/css" enabled="true" />
+        <add mimeType="text/javascript" enabled="true"/>
+        <add mimeType="text/css" enabled="true"/>
       </staticTypes>
     </httpCompression>
-
-    <urlCompression doStaticCompression="true" doDynamicCompression="true" />
-
+    <urlCompression doStaticCompression="true" doDynamicCompression="true"/>
     <staticContent>
-      <remove fileExtension=".woff" />
-      <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
-      <remove fileExtension=".svg" />
-      <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
-      <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="7.00:00:00" />
+      <remove fileExtension=".woff"/>
+      <mimeMap fileExtension=".woff" mimeType="application/font-woff"/>
+      <remove fileExtension=".svg"/>
+      <mimeMap fileExtension=".svg" mimeType="image/svg+xml"/>
+      <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="7.00:00:00"/>
     </staticContent>
-
     <httpProtocol>
       <customHeaders>
-        <remove name="X-Powered-By" />
-        <remove name="X-AspNetMvc-Version" />
-        <add name="Cache-Control" value="public" />
+        <remove name="X-Powered-By"/>
+        <remove name="X-AspNetMvc-Version"/>
+        <add name="Cache-Control" value="public"/>
         <!--Securing against "Click Jacking" http://stackoverflow.com/questions/20047086/securing-my-asp-net-mvc3-website-aganist-click-jacking-->
-        <add name="x-frame-options" value="SAMEORIGIN" />
+        <add name="x-frame-options" value="SAMEORIGIN"/>
         <!--HSTS header for GDS https://www.gov.uk/service-manual/operations/operating-servicegovuk-subdomains#transport-layer-security-->
-        <add name="Strict-Transport-Security" value="max-age=31536000, includeSubDomains;" />
+        <add name="Strict-Transport-Security" value="max-age=31536000, includeSubDomains;"/>
       </customHeaders>
     </httpProtocol>
-
     <httpErrors errorMode="Detailed" existingResponse="Replace">
-      <remove statusCode="410" />
-      <error statusCode="410" subStatusCode="1" path="ApprenticeshipNotFound.html" responseMode="File" />
-      <error statusCode="410" subStatusCode="2" path="TraineeshipNotFound.html" responseMode="File" />
-      <remove statusCode="404" />
-      <error statusCode="404" path="404.html" responseMode="File" />
-      <remove statusCode="403" />
-      <error statusCode="403" path="403.html" responseMode="File" />
-      <remove statusCode="500" />
-      <error statusCode="500" path="500.html" responseMode="File" />
+      <remove statusCode="410"/>
+      <error statusCode="410" subStatusCode="1" path="ApprenticeshipNotFound.html" responseMode="File"/>
+      <error statusCode="410" subStatusCode="2" path="TraineeshipNotFound.html" responseMode="File"/>
+      <remove statusCode="404"/>
+      <error statusCode="404" path="404.html" responseMode="File"/>
+      <remove statusCode="403"/>
+      <error statusCode="403" path="403.html" responseMode="File"/>
+      <remove statusCode="500"/>
+      <error statusCode="500" path="500.html" responseMode="File"/>
     </httpErrors>
-
-    <directoryBrowse enabled="false" />
-
+    <directoryBrowse enabled="false"/>
     <modules runAllManagedModulesForAllRequests="true">
-      <add name="RemoveETag" type="SFA.Apprenticeships.Web.Common.Modules.RemoveETagModule, SFA.Apprenticeships.Web.Common" />
+      <add name="RemoveETag" type="SFA.Apprenticeships.Web.Common.Modules.RemoveETagModule, SFA.Apprenticeships.Web.Common"/>
     </modules>
-
     <!--<security>
       <ipSecurity allowUnlisted="false">
         <add allowed="true" ipAddress="127.0.0.1" subnetMask="255.255.255.0" />
@@ -105,115 +106,115 @@
         --><!-- Management 1 Server --><!--
       </ipSecurity>
     </security>-->
-
-    <validation validateIntegratedModeConfiguration="false" />
-
+    <validation validateIntegratedModeConfiguration="false"/>
     <handlers>
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <remove name="OPTIONSVerbHandler" />
-      <remove name="TRACEVerbHandler" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0"/>
+      <remove name="OPTIONSVerbHandler"/>
+      <remove name="TRACEVerbHandler"/>
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0"/>
     </handlers>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+        <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Owin.Security.OAuth" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+        <assemblyIdentity name="Microsoft.Owin.Security.OAuth" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Owin.Security.Cookies" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+        <assemblyIdentity name="Microsoft.Owin.Security.Cookies" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+        <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed"/>
+        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-1.1.0.0" newVersion="1.1.0.0" />
+        <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="1.0.0.0-1.1.0.0" newVersion="1.1.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="NLog" publicKeyToken="5120e14c03d0593c" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+        <assemblyIdentity name="NLog" publicKeyToken="5120e14c03d0593c" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Data.Edm" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.6.2.0" newVersion="5.6.2.0" />
+        <assemblyIdentity name="Microsoft.Data.Edm" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-5.6.2.0" newVersion="5.6.2.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Data.Services.Client" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.6.2.0" newVersion="5.6.2.0" />
+        <assemblyIdentity name="Microsoft.Data.Services.Client" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-5.6.2.0" newVersion="5.6.2.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Data.OData" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.6.2.0" newVersion="5.6.2.0" />
+        <assemblyIdentity name="Microsoft.Data.OData" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-5.6.2.0" newVersion="5.6.2.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.codedom>
     <compilers>
-      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
-      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
+      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CSharp.CSharpCodeProvider, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701">
+          <providerOption name="CompilerVersion" value="v4.0"/>
+      </compiler>
+      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
   <nlog throwExceptions="true" autoReload="true" xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <extensions>
-      <add assembly="SFA.Apprenticeships.Infrastructure.Logging" />
-      <add assembly="NLog.Contrib" />
+      <add assembly="SFA.Apprenticeships.Infrastructure.Logging"/>
+      <add assembly="NLog.Contrib"/>
     </extensions>
-    <variable name="environment" value="Local" />
+    <variable name="environment" value="Local"/>
     <targets async="true">
       <target xsi:type="FallbackGroup" name="fallbacklogger" returnToFirstOnSuccess="true">
         <target name="rabbit" xsi:type="RabbitMQTarget" QueueName="SFA.Logging" ExchangeName="SFA.Logging" ExchangeType="topic" RoutingKey="SFA.Apprenticeships.Web.Recruit.{0}" AppId="SFA.Apprenticeships.Web.Recruit">
           <layout xsi:type="JsonLayout">
-            <property name="user" layout="${mdlc:userId}" />
-            <property name="session" layout="${mdlc:sessionId}" />
-            <property name="application" layout="SFA.Apprenticeships.Web.Recruit" />
-            <property name="environment" layout="${environment}" />
-            <property name="version" layout="${gdc:item=version}" />
-            <property name="date" layout="${longdate}" />
-            <property name="level" layout="${level:upperCase=true}" />
-            <property name="logger" layout="${logger}" />
-            <property name="machinename" layout="${machinename}" />
-            <property name="processname" layout="${processname}" />
-            <property name="message" layout="${message}" />
-            <property name="exception" layout="${onexception:${exception:format=tostring}}" />
-            <property name="errordata" layout="${onexception:${exception:format=data}}" />
-            <property name="errorcode" layout="${event-context:item=ErrorCode}" />
-            <property name="stacktrace" layout="${onexception:${stacktrace:tostring}}" />
-            <property name="ticks" layout="${ticks}" />
-            <property name="processid" layout="${processid}" />
-            <property name="useragent" layout="${mdlc:UserAgent}" />
-            <property name="referrer" layout="${mdlc:UrlReferrer}" />
-            <property name="userlanguages" layout="${mdlc:UserLanguages}" />
-            <property name="currentculture" layout="${mdlc:CurrentCulture}" />
-            <property name="currentuiculture" layout="${mdlc:CurrentUICulture}" />
-            <property name="headers" layout="${mdlc:Headers}" />
+            <property name="user" layout="${mdlc:userId}"/>
+            <property name="session" layout="${mdlc:sessionId}"/>
+            <property name="application" layout="SFA.Apprenticeships.Web.Recruit"/>
+            <property name="environment" layout="${environment}"/>
+            <property name="version" layout="${gdc:item=version}"/>
+            <property name="date" layout="${longdate}"/>
+            <property name="level" layout="${level:upperCase=true}"/>
+            <property name="logger" layout="${logger}"/>
+            <property name="machinename" layout="${machinename}"/>
+            <property name="processname" layout="${processname}"/>
+            <property name="message" layout="${message}"/>
+            <property name="exception" layout="${onexception:${exception:format=tostring}}"/>
+            <property name="errordata" layout="${onexception:${exception:format=data}}"/>
+            <property name="errorcode" layout="${event-context:item=ErrorCode}"/>
+            <property name="stacktrace" layout="${onexception:${stacktrace:tostring}}"/>
+            <property name="ticks" layout="${ticks}"/>
+            <property name="processid" layout="${processid}"/>
+            <property name="useragent" layout="${mdlc:UserAgent}"/>
+            <property name="referrer" layout="${mdlc:UrlReferrer}"/>
+            <property name="userlanguages" layout="${mdlc:UserLanguages}"/>
+            <property name="currentculture" layout="${mdlc:CurrentCulture}"/>
+            <property name="currentuiculture" layout="${mdlc:CurrentUICulture}"/>
+            <property name="headers" layout="${mdlc:Headers}"/>
           </layout>
         </target>
       </target>
@@ -248,7 +249,7 @@
       -->
     </targets>
     <rules>
-      <logger name="*" minlevel="Info" writeTo="fallbacklogger" />
+      <logger name="*" minlevel="Info" writeTo="fallbacklogger"/>
     </rules>
   </nlog>
 </configuration>
