--- a/src/SFA.Apprenticeships.Infrastructure.EmployerDataService/SFA.Apprenticeships.Infrastructure.EmployerDataService.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.EmployerDataService/SFA.Apprenticeships.Infrastructure.EmployerDataService.csproj
@@ -9,10 +9,11 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SFA.Apprenticeships.Infrastructure.EmployerDataService</RootNamespace>
     <AssemblyName>SFA.Apprenticeships.Infrastructure.EmployerDataService</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Local|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
