--- a/src/SFA.Apprenticeships.Web.Manage/Web.config
+++ b/src/SFA.Apprenticeships.Web.Manage/Web.config
@@ -23,8 +23,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
     <add key="ConfigurationPath" value="Configs\settings.config"/>
     <add key="Environment" value="Debug"/>
-    <add key="ida:MetadataAddress" value="https://naspreacs.accesscontrol.windows.net/FederationMetadata/2007-06/FederationMetadata.xml"/>
-    <add key="ida:Wtrealm" value="https://Manage.findapprenticeship.service.gov.uk/"/>
+    <add key="ida:MetadataAddress" value="https://adtestacs42.accesscontrol.windows.net/FederationMetadata/2007-06/FederationMetadata.xml"/>
+    <add key="ida:Wtrealm" value="https://manage.findapprenticeship.service.gov.uk/"/>
     <add key="CdnUrl" value="//az693499.vo.msecnd.net" />
   </appSettings>
   <!--
