--- a/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
+++ b/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
@@ -285,25 +285,13 @@
     <Compile Include="Attributes\AuthorizeUserAttribute.cs" />
     <Compile Include="Constants\ClaimTypes.cs" />
     <Compile Include="Constants\Messages\AuthorizeMessages.cs" />
-    <Compile Include="Constants\Pages\ProviderUser\VerifyEmailPageMessages.cs" />
-    <Compile Include="Constants\Pages\Provider\AddSitePageMessages.cs" />
     <Compile Include="Constants\ManagementRouteNames.cs" />
     <Compile Include="Constants\Roles.cs" />
-    <Compile Include="Constants\ViewModels\ProviderSiteViewModelMessages.cs" />
-    <Compile Include="Constants\ViewModels\ProviderViewModelMessages.cs" />
-    <Compile Include="Constants\ViewModels\VerifyEmailViewModelMessages.cs" />
-    <Compile Include="Constants\ViewModels\ProviderUserViewModelMessages.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\AgentController.cs" />
-    <Compile Include="Extensions\ClaimsPrincipalExtensions.cs" />
-    <Compile Include="Mediators\ProviderUser\IProviderUserMediator.cs" />
-    <Compile Include="Mediators\ProviderUser\ProviderUserMediator.cs" />
-    <Compile Include="Mediators\ProviderUser\ProviderUserMediatorCodes.cs" />
-    <Compile Include="Mediators\Provider\IProviderMediator.cs" />
-    <Compile Include="Mediators\Home\HomeMediator.cs" />
-    <Compile Include="Mediators\Home\HomeMediatorCodes.cs" />
-    <Compile Include="Mediators\Home\IHomeMediator.cs" />
-    <Compile Include="Controllers\RecuitmentControllerBase.cs" />
+    <Compile Include="Controllers\AgencyUserController.cs" />
+    <Compile Include="Mediators\AgencyUser\AgencyUserMediator.cs" />
+    <Compile Include="Mediators\AgencyUser\AgencyUserMediatorCodes.cs" />
+    <Compile Include="Mediators\AgencyUser\IAgencyUserMediator.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -311,30 +299,10 @@
     <Compile Include="IoC\IoC.cs" />
     <Compile Include="IoC\ManagementWebRegistry.cs" />
     <Compile Include="IoC\StructureMapScopeModule.cs" />
-    <Compile Include="Mediators\Provider\ProviderMediator.cs" />
-    <Compile Include="Providers\IProviderProvider.cs" />
-    <Compile Include="Providers\IProviderUserProvider.cs" />
-    <Compile Include="Providers\ProviderProvider.cs" />
-    <Compile Include="Providers\ProviderUserProvider.cs" />
-    <Compile Include="Mediators\Provider\ProviderMediatorCodes.cs" />
-    <Compile Include="Validators\ProviderUser\VerifyEmailViewModelValidator.cs" />
-    <Compile Include="Validators\ProviderUser\ProviderUserViewModelValidator.cs" />
-    <Compile Include="Validators\Provider\ProviderSiteSearchViewModelValidator.cs" />
-    <Compile Include="Validators\Provider\ProviderSiteViewModelValidator.cs" />
-    <Compile Include="Validators\Provider\ProviderViewModelValidator.cs" />
     <Compile Include="ViewModels\AuthorizeResponseViewModel.cs" />
-    <Compile Include="ViewModels\ProviderUser\VerifyEmailViewModel.cs" />
-    <Compile Include="ViewModels\Provider\ProviderSiteSearchMode.cs" />
-    <Compile Include="ViewModels\Provider\ProviderSiteSearchResponseViewModel.cs" />
-    <Compile Include="ViewModels\Provider\ProviderSiteSearchViewModelMessages.cs" />
-    <Compile Include="ViewModels\Provider\ProviderSiteSearchViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\RecuitmentUserContext.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="ViewModels\Provider\ProviderSiteViewModel.cs" />
-    <Compile Include="ViewModels\Provider\ProviderViewModel.cs" />
-    <Compile Include="ViewModels\ProviderUser\ProviderUserViewModel.cs" />
-    <Compile Include="ViewModels\SettingsViewModel.cs" />
     <Compile Include="Views\Shared\ValidationSummary.generated.cs">
       <DependentUpon>ValidationSummary.cshtml</DependentUpon>
       <AutoGen>True</AutoGen>
@@ -419,7 +387,7 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
-    <Content Include="Views\Agent\Dashboard.cshtml" />
+    <Content Include="Views\AgencyUser\Dashboard.cshtml" />
     <None Include="Web.Demo.config">
       <DependentUpon>Web.config</DependentUpon>
       <SubType>Designer</SubType>
@@ -451,7 +419,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\SignIn\" />
+    <Folder Include="Constants\Pages\" />
+    <Folder Include="Validators\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -482,9 +451,6 @@
       <LastGenOutput>ValidationSummary.generated.cs</LastGenOutput>
     </Content>
     <Content Include="Views\Account\SignOutCallback.cshtml" />
-    <Content Include="Views\Shared\EditorTemplates\AddressViewModel.cshtml">
-      <LastGenOutput>AddressViewModel.generated.cs</LastGenOutput>
-    </Content>
     <Content Include="Views\Home\Privacy.cshtml" />
     <Content Include="Views\Home\TermsAndConditions.cshtml" />
     <Content Include="Views\Home\ContactUs.cshtml" />
