--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -51,6 +51,7 @@
   <repository path="..\SFA.Apprenticeships.Web.Candidate\packages.config" />
   <repository path="..\SFA.Apprenticeships.Web.Common.UnitTests\packages.config" />
   <repository path="..\SFA.Apprenticeships.Web.Common\packages.config" />
+  <repository path="..\SFA.Apprenticeships.Web.Manage\packages.config" />
   <repository path="..\SFA.Apprenticeships.Web.Recruit.UnitTests\packages.config" />
   <repository path="..\SFA.Apprenticeships.Web.Recruit\packages.config" />
 </repositories>
